syntax = "proto3";

package resonator.proto.api.action;

import "api/person.proto";
import "api/common.proto";

message LoginLinkRequest {
  string username = 1;
  string email = 2;
}

message LoginLinkResponse {
  api.ActionStatus response_status = 1;
  // will be left unset if status.success == false
  api.Person person = 2;
}
